# ChangeLog for dev-python/psycopg
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/psycopg/ChangeLog,v 1.61 2007/08/05 21:42:19 mjolnir Exp $

  05 Aug 2007; Martin Jackson <mjolnir@gentoo.org> -psycopg-1.1.18.ebuild:
  Remove 1.1.18

*psycopg-2.0.6 (05 Aug 2007)

  05 Aug 2007; Martin Jackson <mjolnir@gentoo.org>
  +files/psycopg-2.0.6-fbsd.patch, +psycopg-2.0.6.ebuild:
  Add knob for MxDateTime for 121065 and bump to 2.0.6 for 186186

  25 Jul 2007; Raúl Porcel <armin76@gentoo.org> psycopg-1.1.21.ebuild:
  alpha stable

  16 Jul 2007; Raúl Porcel <armin76@gentoo.org> psycopg-2.0.2.ebuild:
  alpha stable

  15 May 2007; Steve Dibb <beandog@gentoo.org> psycopg-2.0.2.ebuild:
  amd64 stable

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org> psycopg-2.0.2.ebuild:
  ia64 stable

  13 Feb 2007; Tiziano Müller <dev-zero@gentoo.org> psycopg-2.0.5.1.ebuild:
  Cleanup

*psycopg-2.0.5.1 (27 Dec 2006)

  27 Dec 2006; Tiziano Müller <dev-zero@gentoo.org>
  -files/psycopg-2.0.4-debug.patch, -files/psycopg-2.0.4-fbsd.patch,
  +files/psycopg-2.0.5.1-debug.patch, +files/psycopg-2.0.5.1-fbsd.patch,
  -psycopg-2.0.4.ebuild, +psycopg-2.0.5.1.ebuild:
  Version bump. Dropped old version.

  03 Dec 2006; Markus Rothe <corsair@gentoo.org> psycopg-2.0.2.ebuild:
  Stable on ppc64

  13 Nov 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  psycopg-2.0.2.ebuild:
  ppc stable, bug #154574

  13 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> psycopg-2.0.2.ebuild:
  Stable on sparc

  11 Nov 2006; Andrej Kacian <ticho@gentoo.org> psycopg-2.0.2.ebuild:
  Stable on x86, bug #154574.

  21 Oct 2006; Aron Griffis <agriffis@gentoo.org> psycopg-1.1.21.ebuild:
  Mark 1.1.21 stable on ia64

  25 Aug 2006; Javier Villavicencio <the_paya@gentoo.org>
  +files/psycopg-2.0.4-fbsd.patch, psycopg-2.0.4.ebuild:
  Added fix for compilation in freebsd, and ~x86-fbsd keyword.

  17 Aug 2006; Markus Rothe <corsair@gentoo.org> psycopg-1.1.21.ebuild: